--- a/public/html/comparison2.html
+++ b/public/html/comparison2.html
@@ -1,76 +1,90 @@
-<!-- index.html -->
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Acme Landing</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Comparison Page - Tailwind CSS</title>
     <!-- Tailwind via CDN for quick demo only -->
     <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="text-slate-800">
-    <header class="max-w-6xl mx-auto px-6 py-12">
-      <nav class="flex justify-between items-center">
-        <div class="font-bold text-xl">Acme</div>
-        <a href="#pricing" class="px-4 py-2 rounded bg-slate-900 text-white">Get started</a>
-      </nav>
-    </header>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        'custom-blue': '#3498db',
+                        'custom-dark': '#2c3e50',
+                        'custom-gray': '#7f8c8d',
+                        'custom-red': '#e74c3c',
+                        'custom-red-dark': '#c0392b',
+                        'custom-border': '#ecf0f1'
+                    }
+                }
+            }
+        }
+    </script>
+</head>
+<body class="font-sans leading-relaxed text-gray-800 bg-gray-50">
+    <div class="max-w-6xl mx-auto p-8">
+        <header class="text-center mb-12">
+            <h1 class="text-4xl text-custom-dark mb-4 font-normal">Static HTML Landing Page With Tailwind CSS</h1>
+            <p class="text-xl text-custom-gray mb-8">Compare this with the Next.js version for performance and functionality differences</p>
+        </header>
 
-    <main class="max-w-6xl mx-auto px-6">
-      <!-- Hero -->
-      <section class="py-16">
-        <h1 class="text-4xl font-bold tracking-tight">Launch faster with Acme</h1>
-        <p class="mt-4 text-lg text-slate-600">Simple tools to ship pages in minutes.</p>
-        <div class="mt-8 flex gap-3">
-          <a class="px-5 py-3 rounded bg-slate-900 text-white" href="#pricing">Try it free</a>
-          <a class="px-5 py-3 rounded border border-slate-300" href="#how-it-works">Learn more</a>
-        </div>
-      </section>
+        <main>
+            <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12 auto-rows-fr">
+                <div class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
+                    <h3 class="text-custom-blue mb-4 text-lg font-medium">🚀 Fast Loading</h3>
+                    <p>Static HTML loads instantly without any JavaScript frameworks or build processes. Perfect for simple landing pages that need maximum speed.</p>
+                </div>
 
-      <!-- Features -->
-      <section id="how-it-works" class="py-12 grid md:grid-cols-3 gap-8">
-        <div><h3 class="font-semibold">Markdown first</h3><p class="text-slate-600">Write content quickly.</p></div>
-        <div><h3 class="font-semibold">React ready</h3><p class="text-slate-600">Add components as needed.</p></div>
-        <div><h3 class="font-semibold">Blazing build</h3><p class="text-slate-600">Deploy in seconds.</p></div>
-      </section>
+                <div class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
+                    <h3 class="text-custom-blue mb-4 text-lg font-medium">📱 Responsive Design</h3>
+                    <p>CSS Grid and Flexbox ensure this page looks great on all devices, from mobile phones to desktop computers.</p>
+                </div>
 
-      <!-- Pricing -->
-      <section id="pricing" class="py-16">
-        <h2 class="text-3xl font-bold">Pricing</h2>
-        <div class="mt-8 grid md:grid-cols-3 gap-6">
-          <div class="rounded-xl border p-6">
-            <h3 class="font-semibold">Starter</h3>
-            <p class="mt-2 text-3xl font-bold">€9<span class="text-base font-normal">/mo</span></p>
-            <ul class="mt-4 list-disc pl-5 text-slate-600">
-              <li>1 project</li><li>Email support</li>
-            </ul>
-            <a class="mt-6 inline-block px-4 py-2 rounded bg-slate-900 text-white" href="#">Choose</a>
-          </div>
+                <div class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
+                    <h3 class="text-custom-blue mb-4 text-lg font-medium">🎨 Modern Styling</h3>
+                    <p>Clean, modern design with smooth transitions and hover effects using pure CSS without any external dependencies.</p>
+                </div>
 
-          <div class="rounded-xl border p-6 border-slate-900 relative">
-            <div class="absolute -top-3 left-1/2 transform -translate-x-1/2 bg-slate-900 text-white px-3 py-1 rounded-full text-xs">Popular</div>
-            <h3 class="font-semibold">Pro</h3>
-            <p class="mt-2 text-3xl font-bold">€29<span class="text-base font-normal">/mo</span></p>
-            <ul class="mt-4 list-disc pl-5 text-slate-600">
-              <li>10 projects</li><li>Priority support</li><li>Advanced analytics</li><li>Custom domains</li>
-            </ul>
-            <a class="mt-6 inline-block px-4 py-2 rounded bg-slate-900 text-white" href="#">Choose</a>
-          </div>
+                <div class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
+                    <h3 class="text-custom-blue mb-4 text-lg font-medium">♿ Accessible</h3>
+                    <p>Semantic HTML structure with proper heading hierarchy and alt text for screen readers and better SEO.</p>
+                </div>
 
-          <div class="rounded-xl border p-6">
-            <h3 class="font-semibold">Enterprise</h3>
-            <p class="mt-2 text-3xl font-bold">€99<span class="text-base font-normal">/mo</span></p>
-            <ul class="mt-4 list-disc pl-5 text-slate-600">
-              <li>Unlimited projects</li><li>24/7 phone support</li><li>White-label options</li><li>API access</li>
-            </ul>
-            <a class="mt-6 inline-block px-4 py-2 rounded bg-slate-900 text-white" href="#">Choose</a>
-          </div>
-        </div>
-      </section>
-    </main>
+                <div class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
+                    <h3 class="text-custom-blue mb-4 text-lg font-medium">🔧 Easy to Modify</h3>
+                    <p>Simple HTML and CSS that any developer can understand and modify without learning complex frameworks.</p>
+                </div>
 
-    <footer class="max-w-6xl mx-auto px-6 py-12 text-sm text-slate-500">
-      © Acme
-    </footer>
-  </body>
+                <div class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
+                    <h3 class="text-custom-blue mb-4 text-lg font-medium">🌐 Universal Support</h3>
+                    <p>Works in every browser, even older ones, without polyfills or transpilation. Maximum compatibility guaranteed.</p>
+                </div>
+            </section>
+
+            <section class="text-center bg-gradient-to-br from-custom-blue to-custom-dark text-white p-12 rounded-xl">
+                <h2 class="text-2xl font-normal mb-4">Ready to Compare?</h2>
+                <p class="mb-6">Open your Next.js app and this HTML page side by side to see the differences in loading speed, bundle size, and developer experience.</p>
+                <a href="/" class="inline-block bg-custom-red text-white px-8 py-4 no-underline rounded-md font-bold mt-4 hover:bg-custom-red-dark transition-colors duration-300">View Next.js Version</a>
+            </section>
+        </main>
+
+        <footer class="text-center mt-12 pt-8 border-t border-custom-border text-custom-gray">
+            <p>&copy; 2025 HTML vs Next.js Comparison. Created for performance testing and analysis.</p>
+        </footer>
+    </div>
+
+    <script>
+        // Simple analytics tracking (optional)
+        console.log('Static HTML page loaded at:', new Date().toISOString());
+
+        // Add some interactivity
+        document.querySelectorAll('.bg-white').forEach(card => {
+            card.addEventListener('click', () => {
+                console.log('Feature card clicked:', card.querySelector('h3').textContent);
+            });
+        });
+    </script>
+</body>
 </html>
