Standardize CTA sections styling across html comparison pages
- Update comparison1: add flexbox layout, better typography, consistent spacing
- Update comparison2: add flexbox layout, font-weight, opacity, consistent spacing
- All CTA sections now have matching gradient background and styling
- Consistent spacing: 3rem padding, 2rem margins, 0.9 opacity for text
- Follows the same visual design pattern across HTML and React versions

--- a/public/html/comparison1.html
+++ b/public/html/comparison1.html
@@ -66,11 +66,27 @@
         }
 
         .cta-section {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             text-align: center;
             background: linear-gradient(135deg, #3498db, #2c3e50);
             color: white;
             padding: 3rem;
             border-radius: 12px;
+            margin-bottom: 3rem;
+        }
+
+        .cta-section h2 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+            font-weight: 700;
+        }
+
+        .cta-section p {
+            font-size: 1.1rem;
+            margin-bottom: 2rem;
+            opacity: 0.9;
         }
 
         .cta-button {
@@ -81,7 +97,7 @@
             text-decoration: none;
             border-radius: 6px;
             font-weight: bold;
-            margin-top: 1rem;
+            margin-top: 2rem;
             transition: background 0.3s ease;
         }
 
