Fix semantic HTML anti-patterns across codebase
There is still some left over anti-patterns from the first AI pass.
Time to clean those up.

Header/Footer components:
- Remove redundant .headerContainer/.footerContainer classes
- Style <header> and <footer> elements directly per best practices
- Remove unused CSS module imports

comparison3 HTML fixes:
- Remove .mainContainer, .headerContainer, .footerContainer classes
- Use .page-layout for consistency with other pages
- Update CSS files to use semantic element selectors

FeatureCard improvement:
- Change from <div> to <article> for better semantic meaning
- Standalone feature content fits article element purpose

Follows documented best practices: 'Don't create class names that are
the same as the tag name. Just target the tag.'

--- a/public/html/comparison3/index.html
+++ b/public/html/comparison3/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="mainContainer">
-        <header class="headerContainer">
+    <div class="page-layout">
+        <header>
             <h1>Modular CSS Landing Page</h1>
             <p>Same functionality as comparison1.html but with organized CSS modules for better maintainability</p>
         </header>
@@ -46,16 +46,14 @@
                 </div>
             </section>
 
-            <section class="ctaContainer">
+            <section class="cta-section">
                 <h2>Ready to Compare?</h2>
-                <p>Open your Next.js app and this HTML page side by side to see the differences in loading speed, bundle size, and developer experience.</p>
-                <div class="ctaButtons">
-                    <a href="/">View Next.js Version</a>
-                </div>
+                <p>See how this static HTML page performs against the Next.js version.</p>
+                <a href="/" class="cta-button">View Next.js Version</a>
             </section>
         </main>
 
-        <footer class="footerContainer">
+        <footer>
             <p>&copy; 2025 HTML vs Next.js Comparison. Created for performance testing and analysis.</p>
         </footer>
     </div>
