Refactor: Convert feature card divs to semantic article elements
Replace <div> with <article> for feature cards in all HTML comparison
pages to improve semantic HTML structure and accessibility.

--- a/public/html/comparison2.html
+++ b/public/html/comparison2.html
@@ -32,35 +32,35 @@
 
         <main>
             <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12 auto-rows-fr">
-                <div class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
+                <article class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
                     <h3 class="text-custom-blue mb-4 text-lg font-medium">🚀 Fast Loading</h3>
                     <p>Static HTML loads instantly without any JavaScript frameworks or build processes. Perfect for simple landing pages that need maximum speed.</p>
-                </div>
+                </article>
 
-                <div class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
+                <article class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
                     <h3 class="text-custom-blue mb-4 text-lg font-medium">📱 Responsive Design</h3>
                     <p>CSS Grid and Flexbox ensure this page looks great on all devices, from mobile phones to desktop computers.</p>
-                </div>
+                </article>
 
-                <div class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
+                <article class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
                     <h3 class="text-custom-blue mb-4 text-lg font-medium">🎨 Modern Styling</h3>
                     <p>Clean, modern design with smooth transitions and hover effects using pure CSS without any external dependencies.</p>
-                </div>
+                </article>
 
-                <div class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
+                <article class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
                     <h3 class="text-custom-blue mb-4 text-lg font-medium">♿ Accessible</h3>
                     <p>Semantic HTML structure with proper heading hierarchy and alt text for screen readers and better SEO.</p>
-                </div>
+                </article>
 
-                <div class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
+                <article class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
                     <h3 class="text-custom-blue mb-4 text-lg font-medium">🔧 Easy to Modify</h3>
                     <p>Simple HTML and CSS that any developer can understand and modify without learning complex frameworks.</p>
-                </div>
+                </article>
 
-                <div class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
+                <article class="bg-white p-8 rounded-lg shadow-md hover:-translate-y-1 transition-transform duration-300 ease-out">
                     <h3 class="text-custom-blue mb-4 text-lg font-medium">🌐 Universal Support</h3>
                     <p>Works in every browser, even older ones, without polyfills or transpilation. Maximum compatibility guaranteed.</p>
-                </div>
+                </article>
             </section>
 
             <section class="flex flex-col items-center text-center bg-gradient-to-br from-custom-blue to-custom-dark text-white p-12 rounded-xl mb-12">
