--- a/public/html/comparison3/index.html
+++ b/public/html/comparison3/index.html
@@ -15,35 +15,35 @@
 
         <main>
             <section class="featuresGrid">
-                <div class="featureCard">
+                <article class="featureCard">
                     <h3>🚀 Fast Loading</h3>
                     <p>Static HTML loads instantly without any JavaScript frameworks or build processes. Perfect for simple landing pages that need maximum speed.</p>
-                </div>
+                </article>
 
-                <div class="featureCard">
+                <article class="featureCard">
                     <h3>📱 Responsive Design</h3>
                     <p>CSS Grid and Flexbox ensure this page looks great on all devices, from mobile phones to desktop computers.</p>
-                </div>
+                </article>
 
-                <div class="featureCard">
+                <article class="featureCard">
                     <h3>🎨 Modern Styling</h3>
                     <p>Clean, modern design with smooth transitions and hover effects using pure CSS without any external dependencies.</p>
-                </div>
+                </article>
 
-                <div class="featureCard">
+                <article class="featureCard">
                     <h3>♿ Accessible</h3>
                     <p>Semantic HTML structure with proper heading hierarchy and alt text for screen readers and better SEO.</p>
-                </div>
+                </article>
 
-                <div class="featureCard">
+                <article class="featureCard">
                     <h3>🔧 Easy to Modify</h3>
                     <p>Simple HTML and CSS that any developer can understand and modify without learning complex frameworks.</p>
-                </div>
+                </article>
 
-                <div class="featureCard">
+                <article class="featureCard">
                     <h3>🌐 Universal Support</h3>
                     <p>Works in every browser, even older ones, without polyfills or transpilation. Maximum compatibility guaranteed.</p>
-                </div>
+                </article>
             </section>
 
             <section class="cta-section">
