Feature: Enhance semantic HTML compliance across all pages
- Add <nav> elements to wrap navigation links in all HTML files
- Implement <aside> for supplementary content ('Learn More' section)
- Update CTA component with semantic navigation structure
- Improve accessibility and SEO through proper semantic markup
- Achieve full compliance with documented semantic-html.md standards

This update ensures all pages follow semantic HTML best practices:
- Navigation links are properly identified with <nav>
- Supplementary content uses <aside> elements
- Maintains existing <article>, <section>, <main> structure
- Enhances screen reader navigation and search engine understanding

--- a/public/html/comparison1.html
+++ b/public/html/comparison1.html
@@ -171,7 +171,9 @@
             <section class="cta-section">
                 <h2>Ready to Compare?</h2>
                 <p>Open your Next.js app and this HTML page side by side to see the differences in loading speed, bundle size, and developer experience.</p>
-                <a href="/" class="cta-button">View Next.js Version</a>
+                <nav>
+                    <a href="/" class="cta-button">View Next.js Version</a>
+                </nav>
             </section>
         </main>
 
