--- a/public/html/comparison2.html
+++ b/public/html/comparison2.html
@@ -66,7 +66,9 @@
             <section class="flex flex-col items-center text-center bg-gradient-to-br from-custom-blue to-custom-dark text-white p-12 rounded-xl mb-12">
                 <h2 class="text-2xl font-bold mb-4">Ready to Compare?</h2>
                 <p class="text-lg mb-8 opacity-90">Open your Next.js app and this HTML page side by side to see the differences in loading speed, bundle size, and developer experience.</p>
-                <a href="/" class="inline-block bg-custom-red text-white px-8 py-4 no-underline rounded-md font-bold mt-8 hover:bg-custom-red-dark transition-colors duration-300">View Next.js Version</a>
+                <nav>
+                    <a href="/" class="inline-block bg-custom-red text-white px-8 py-4 no-underline rounded-md font-bold mt-8 hover:bg-custom-red-dark transition-colors duration-300">View Next.js Version</a>
+                </nav>
             </section>
         </main>
 
