--- a/public/html/comparison3/index.html
+++ b/public/html/comparison3/index.html
@@ -49,7 +49,9 @@
             <section class="cta-section">
                 <h2>Ready to Compare?</h2>
                 <p>See how this static HTML page performs against the Next.js version.</p>
-                <a href="/" class="cta-button">View Next.js Version</a>
+                <nav>
+                    <a href="/" class="cta-button">View Next.js Version</a>
+                </nav>
             </section>
         </main>
 
